crates/clove-tui/src/snapshots/clove_tui__snapshot__help_overlay_portrait.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ Help ────────────────────────────────┐
│ clove tui — read-only browser        │
│                                      │
│ ↑/k ↓/j      move selection          │
│ g / G        jump to top / bottom    │
│ Tab / 1 2 3  All / Ready / Blocked   │
│ o / t / c    overview / dep tree /   │
│ comments                             │
│ →/l  ←/h     focus detail / list     │
│ (narrow)                             │
│ PgUp / PgDn  scroll detail           │
│ s / S        cycle sort field /      │
│ direction                            │
│ f            filter menu (facets)    │
│ x            clear all filters       │
│ /            search id, title,       │
│ labels                               │
│ Esc          clear search / back /   │
│ close                                │
│ r            refresh from disk       │
│ ?            toggle this help        │
│ q            quit                    │
│                                      │
│ priority     ! ↑ • ↓  =  p0 p1 p2/p3 │
│ p4 (by color)                        │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
