crates/clove-tui/src/snapshots/clove_tui__snapshot__help_overlay_square.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ clove ───────────────────────────────────────────────────┐
│  All 7  │  Ready 4  │  Blocked 1                         │
└──────────────────────────────────────────────────────────┘
┌ Items (7) ───────────────────────────────────────────────┐
│▌◐ F #9QX4D1B7 ! Build REST API ●                         │
│ ○ B #0HZ6C3PW ↑ Investigate flaky CI ●                   │
│ ● C #7AF3K2MN ↑ Set up database schema                   │
│ ○ E #3HT6WYG5 • Ship v1 release ●                        │
│ ○ F #K2M8ZP5R • Write integration tests ✗                │
│ ○ F #5RB9NC2V • Frontend dashboard ●                     │
│ ● D #8XQ4F7DM ↓ Docs site                                │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│    ┌ Help ──────────────────────────────────────────┐    │
│    │ clove tui — browser + editor                   │    │
│    │                                                │    │
│    │ ↑/k ↓/j      move selection                    │    │
│    │ g / G        jump to top / bottom              │    │
│    │ Tab / 1 2 3  All / Ready / Blocked             │    │
│    │ o / t / c    overview / dep tree / comments    │    │
│    │ →/l  ←/h     focus detail / list (narrow)      │    │
└────│ PgUp / PgDn  scroll detail                     │────┘
┌ Ove│ s / S        cycle sort field / direction      │────┐
│ #9Q│ f            filter menu (facets)              │ady │
│ Bui│ x            clear all filters                 │s 1 │
│────│ /            search id, title, labels          │────│
│ Goa│ n / e        new / edit item                   │    │
│    │ Esc          clear search / back / close       │    │
│ Bui│ r            refresh from disk                 │    │
│    │ ?            toggle this help                  │    │
│ • C│ q            quit                              │    │
│ • A│                                                │    │
│    │ priority     ! ↑ • ↓  =  p0 p1 p2/p3 p4 (by    │    │
│ Ste│ color)                                         │    │
│    └────────────────────────────────────────────────┘    │
│ 1. Define routes                                         │
│ 2. Wire handlers                                         │
│                                                          │
│ │ Blocked on the schema work until it lands.             │
│                                                          │
│ ──────────────────────────────────────────────────────── │
│                                                          │
│ Done when the integration tests pass.                    │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│──────────────────────────────────────────────────────────│
│ labels area:api, backend  created Jan 1 · updated Jan 20 │
└──────────────────────────────────────────────────────────┘
7 item(s) loaded   ?: help · q: quit
