crates/clove-tui/src/snapshots/clove_tui__snapshot__new_form_caret_mid_text_portrait.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ New item ────────────────────────────┐
│ ▌   Title: Tit▏le                    │
│      Type: feature                   │
│  Priority: p2                        │
│  Assignee:                           │
│    Labels:                           │
│    Parent:                           │
│      Deps:                           │
│      Body:                           │
│                                      │
│                                      │
│ Ctrl-S save · Esc cancel · Tab/↑↓ fi │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
