crates/clove-tui/src/snapshots/clove_tui__snapshot__new_form_portrait.snap
---
source: crates/clove-tui/src/snapshot.rs
expression: rendered
---
┌ New item ────────────────────────────┐
│ ▌   Title: New work item▏            │
│      Type: feature                   │
│  Priority: p2                        │
│  Assignee:                           │
│    Labels:                           │
│    Parent:                           │
│      Deps:                           │
│      Body:                           │
│                                      │
│                                      │
│                                      │
│ Ctrl-S save · Esc cancel · Tab/↑↓ fi │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
